k8s/base/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth-stable
  namespace: platform
  labels:
    app: auth
  annotations:
    service.kubernetes.io/topology-aware-hints: "auto"
spec:
  selector:
    app: auth
  ports:
    - name: http
      port: 9092
      targetPort: 9092
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: auth-canary
  namespace: platform
  labels:
    app: auth
  annotations:
    service.kubernetes.io/topology-aware-hints: "auto"
spec:
  selector:
    app: auth
  ports:
    - name: http
      port: 9092
      targetPort: 9092
      protocol: TCP
  type: ClusterIP
